--- a/app/templates/_badges.html
+++ b/app/templates/_badges.html
@@ -1,9 +1,8 @@
 {# app/templates/_badges.html #}
 {% macro render_badges(u, size='18px') -%}
-  {# هل u قاموس؟ (session_user) أم كائن ORM (User)؟ #}
+  {# يدعم dict (session_user) أو كائن ORM (User) #}
   {% set is_dict = u is mapping %}
 
-  {# === قيم آمنة بغضّ النظر عن النوع === #}
   {# موثّق #}
   {% if is_dict %}
     {% set is_verified = u.get('is_verified', False) %}
@@ -11,7 +10,7 @@
     {% set is_verified = (u|attr('is_verified')) if (u is not none and (u|attr('is_verified') is not undefined)) else False %}
   {% endif %}
 
-  {# جديد < شهرين: نفضّل خاصية is_new_under_2m إن وُجدت، وإلا badge_new_yellow اليدوية #}
+  {# جديد < شهرين أو فلاغ أصفر يدوي #}
   {% if is_dict %}
     {% set is_new_under_2m = u.get('is_new_under_2m', False) %}
     {% set badge_new_yellow = u.get('badge_new_yellow', False) %}
@@ -19,13 +18,12 @@
     {% set is_new_under_2m = (u|attr('is_new_under_2m')) if (u is not none and (u|attr('is_new_under_2m') is not undefined)) else False %}
     {% set badge_new_yellow = (u|attr('badge_new_yellow')) if (u is not none and (u|attr('badge_new_yellow') is not undefined)) else False %}
   {% endif %}
-
   {% set show_yellow = is_new_under_2m or badge_new_yellow %}
 
-  {# === إخراج الشارات (فقط الأصفر والبنفسجي) === #}
+  {# فقط شارتين: أصفر وبنفسجي #}
   {% if show_yellow %}
     <img
-      src="{{ url_for('static', path='img/jaune.png') }}"
+      src="/static/img/jaune.png"
       alt="جديد"
       title="حساب جديد"
       style="height:{{ size }};width:auto;vertical-align:middle;margin-inline-end:.25rem;"
@@ -34,7 +32,7 @@
 
   {% if is_verified %}
     <img
-      src="{{ url_for('static', path='img/violet.png') }}"
+      src="/static/img/violet.png"
       alt="موثّق"
       title="حساب موثّق من الإدارة"
       style="height:{{ size }};width:auto;vertical-align:middle;margin-inline-end:.25rem;"
